<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Keypad</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="key_to_num">12#</string>
    <string name="key_to_page">1/1</string>
    <string name="key_comma">,</string>
    <string name="key_dot">.</string>
    <string name="key_space">︺</string>
    <string name="key_backspace">←</string>
    <string name="key_enter">↵</string>

</resources>
