<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="0dp">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#ccc"
        android:scrollbarAlwaysDrawHorizontalTrack="false">
        <LinearLayout
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_00" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_01" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_02" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_03" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_04" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_05" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_06" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_07" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_08" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_09" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_10" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_11" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_12" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_13" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_14" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_15" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_16" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_17" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_18" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_19" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_20" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_21" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_22" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_23" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_24" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_25" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_26" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_27" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_28" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_29" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_30" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_31" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_32" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_33" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_34" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_35" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_36" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_37" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_38" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_39" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_to_num"
            android:id="@+id/btn_40" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_to_page"
            android:id="@+id/btn_41" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_comma"
            android:id="@+id/btn_42" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_dot"
            android:id="@+id/btn_43" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_space"
            android:id="@+id/btn_44" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:id="@+id/btn_45" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_backspace"
            android:id="@+id/btn_46" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/key_enter"
            android:id="@+id/btn_47" />
    </LinearLayout>

</LinearLayout>